[package]
name = "a-star"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
axum = { version = "0.6.18", features = ["multipart"] }
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }